  * Resolve symlinks before looking up devices in /proc/swaps.
  * Minor read_list optimisation using a ${parameter:+word} expansion.
  * Optimise humandev cciss handling a little, fixing a shell syntax error
    along the way that created a file called "15" rather than checking
    whether $lun was greater than 15.
  * Use 'mkdir -p' rather than more awkward test-then-create constructions.

  [ Anton Zinoviev ]
  * Simplify the logic of the main partman script.  Rename auto.d to
    display.d.
  * Compute some variables only once to make things faster:
    - can_escape: whether debconf can escape only once.
    - debconf_select_lead: can we use NBSP on the terminal

 -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jul 2007 17:43:17 +0100

partman-base (109) unstable; urgency=low

  [ Otavio Salvador ]
  * Remove partmap on clean.
  * Fix a compilation warning on partmap.c.

  [ Colin Watson ]
  * Use MS-DOS label by default on PS3 systems.

  [ Frans Pop ]
  * Add support for Serial ATA RAID (closes: #389570):
    - recognize and display dmraid devices
    - skip physical disks that are part of a SATA RAID disk
    Thanks to Jérémy Bobbio whose patch was used in the changes.

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Japanese (ja.po) by Kenshi Muto
  * Dutch (nl.po) by Frans Pop
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Ukrainian (uk.po)
  * Vietnamese (vi.po) by Clytie Siddall
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:22:23 +0200

partman-base (108) unstable; urgency=low

  [ Martin Michlmayr ]
  * Remove references to RiscPC since this platform is no longer
    supported.

  [ Colin Watson ]