@@ -7,6 +7,10 @@ partman-base (110) UNRELEASED; urgency=low
     along the way that created a file called "15" rather than checking
     whether $lun was greater than 15.
   * Use 'mkdir -p' rather than more awkward test-then-create constructions.
+  * If devices are passed as command-line arguments to parted_devices,
+    iterate over them rather than over the list of devices probed by
+    libparted. This can be useful to support devices that libparted would
+    not normally probe automatically, such as loop devices.
 
   [ Anton Zinoviev ]
   * Simplify the logic of the main partman script.  Rename auto.d to
